Início do conteúdo

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Iniciando na programação</h1>
         </header>
-        <article>Artigo 001</article>
-        <p>Texto Artigo 001</p>
+        <article>Como começar?</article>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis distinctio est asperiores maiores minus quia tempora. Sint blanditiis doloribus atque debitis ratione qui libero reiciendis ullam provident obcaecati, accusamus corrupti.</p>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Teto Artigo 002</p>
+            <h2>Como colocar na prática meus aprendizados?</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus animi omnis veritatis sunt nulla non facilis reiciendis dolores ex deserunt at sint, quibusdam est earum totam corporis aspernatur accusantium explicabo.</p>
         </article>
     </main>
     
