--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=], initial-scale=1.0">
-    <title>Título do site</title>
+    <title>Iniciante programando</title>
 </head>
 <body>
     <main>
