--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <header>
             <h1>Iniciando na programação</h1>
+            <img src="estilos/y9xquxzh.png" alt="Programando">
         </header>
         <article>Como começar?</article>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis distinctio est asperiores maiores minus quia tempora. Sint blanditiis doloribus atque debitis ratione qui libero reiciendis ullam provident obcaecati, accusamus corrupti.</p>
